--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>2.8.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>failsafe</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
